src/objects/KOL_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Payment_frequency__c</fullName>
        <label>Payment frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Per Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Per_Publication__c</fullName>
        <description>Honorarium for one publication</description>
        <inlineHelpText>Honorarium for one publication</inlineHelpText>
        <label>Per Publication</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_compensation__c</fullName>
        <formula>Planning_hours_to_be_compensated__c *  Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planning_hours_to_be_compensated__c</fullName>
        <label>Planning hours to be compensated</label>
        <summarizedField>KOL_Contract_Deliverable__c.Planning_hours__c</summarizedField>
        <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Presentation_Materials_Remaining__c</fullName>
        <formula>IF(Presentation_material__c-Delivered_Presentation_Materials__c&lt;0,0,Presentation_material__c-Delivered_Presentation_Materials__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Presentation Materials Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presentation_material__c</fullName>
        <description>Number to deliver on agreement/contract</description>
        <inlineHelpText>Number to deliver on agreement/contract</inlineHelpText>
        <label># Presentation materials Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <description>Deliverables on agreement/contract</description>
        <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
        <label># Publications Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publication_in_Pubmed__c</fullName>
        <description>Honorarium for publication in Pubmed</description>
        <inlineHelpText>Honorarium for publication in Pubmed</inlineHelpText>
        <label>Publication in Pubmed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publication_per_working_days__c</fullName>
        <description>Honorarium for publication per working days</description>
        <inlineHelpText>Honorarium for publication per working days</inlineHelpText>
        <label>Publication per working days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publications_Remaining__c</fullName>
        <formula>IF(Publication__c-Delivered_Pubications__c&lt;0, 0, Publication__c-Delivered_Pubications__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Publications Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Read_the_Contract_Specific_infomraiton__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This contract includes specific information</description>
        <inlineHelpText>This contract includes specific information</inlineHelpText>
        <label>Read the Contract - Specific information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fill in checkbox if the contract includes Reporting</description>
        <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
        <label>Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviews_Remaining__c</fullName>
        <formula>IF(Reviews__c-Delivered_Reviews__c&lt;0,0, Reviews__c-Delivered_Reviews__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Reviews Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reviews__c</fullName>
        <description>Number to deliver on agreement/contract</description>
        <inlineHelpText>Number to deliver on agreement/contract</inlineHelpText>
        <label># Reviews Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <inlineHelpText>Add the SBU that signs the contract</inlineHelpText>
        <label>SBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Instruments</fullName>
                </value>
                <value>
                    <fullName>Treatment Centers</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scientific_Posters_Remaining__c</fullName>
        <formula>IF(Scientific_posters__c-Delivered_Scientific_Folders__c&lt;0, 0, Scientific_posters__c-Delivered_Scientific_Folders__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Scientific Posters Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scientific_posters__c</fullName>
        <description>Number to deliver on agreement/contract</description>
        <inlineHelpText>Number to deliver on agreement/contract</inlineHelpText>
        <label># Scientific Posters Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The expected or actual start date of the contract</description>
        <inlineHelpText>The expected or actual start date of the contract</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The Status of the contract</description>
        <inlineHelpText>The Status of the contract</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Under Negotiation</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated/Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fill in checkbox if the contract includes Study Project</description>
        <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
        <label>Study Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tenancy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fill in checkbox if the contract includes Tenancy</description>
        <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
        <label>Tenancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Fee_Compensation__c</fullName>
        <label>Total Fee Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_compensation__c</fullName>
        <formula>Plan_compensation__c +  Travel_compensation__c +  Work_compensation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_compensation__c</fullName>
        <formula>Travel_hours_to_be_compensated__c  *  Hourly_Rate__c * 0.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_expenses_covered_by_DI__c</fullName>
        <description>Travel expenses covered by DENTSPLY Implants?</description>
        <inlineHelpText>Travel expenses covered by DENTSPLY Implants?</inlineHelpText>
        <label>Travel expenses covered by DI?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_hours_to_be_compensated__c</fullName>
        <label>Travel hours to be compensated</label>
        <summarizedField>KOL_Contract_Deliverable__c.Travel_hours__c</summarizedField>
        <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Traveling_honorarium_information__c</fullName>
        <description>To be used if other information is needed</description>
        <inlineHelpText>To be used if other information is needed</inlineHelpText>
        <label>Traveling honorarium information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Traveling_per_day__c</fullName>
        <description>Honorarium of traveling per day</description>
        <inlineHelpText>Honorarium of traveling per day</inlineHelpText>
        <label>Traveling per day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Traveling_per_half_day__c</fullName>
        <description>Honorarium of traveling per half day</description>
        <inlineHelpText>Honorarium of traveling per half day</inlineHelpText>
        <label>Traveling per half day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Traveling_to_consulting__c</fullName>
        <description>Honorarium of traveling to consulting</description>
        <inlineHelpText>Honorarium of traveling to consulting</inlineHelpText>
        <label>Traveling to consulting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travelling_compensation__c</fullName>
        <formula>or_Travel_Hours_to_be_compensated__c *  Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travelling compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Contract__c</fullName>
        <description>This i type of Speaker/KOL Contract</description>
        <inlineHelpText>This is the type of Speaker/KOL Contract</inlineHelpText>
        <label>Type of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-time Agreeement</fullName>
                </value>
                <value>
                    <fullName>Courses</fullName>
                </value>
                <value>
                    <fullName>Writing</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Confidentiality</fullName>
                </value>
                <value>
                    <fullName>Copyright</fullName>
                </value>
                <value>
                    <fullName>Data collection, Storage and Use</fullName>
                </value>
                <value>
                    <fullName>Licensing, Royalty and Commission</fullName>
                </value>
                <value>
                    <fullName>Research Collaboration</fullName>
                </value>
                <value>
                    <fullName>Grant &amp; Research Endowed Chairs</fullName>
                </value>
                <value>
                    <fullName>Ambassador program</fullName>
                </value>
                <value>
                    <fullName>Intellectual property</fullName>
                </value>
                <value>
                    <fullName>Real property leases</fullName>
                </value>
                <value>
                    <fullName>Equipment Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_compensation__c</fullName>
        <formula>Hours_of_work_to_be_compensated__c *  Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Planning_Hours_to_be_compensated__c</fullName>
        <inlineHelpText>1-2 hours per lecture hour when speaker is presenting curriculum they have presented on prior occasions.
4-6 hours of planning time per lecture hour when speaker presents curriculum for the first time.
Lectures at major meetings MAY require more time</inlineHelpText>
        <label># of Planning Hours to be compensated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_hours_of_work__c</fullName>
        <inlineHelpText># of required working hours, regardless of breaks and meals.  Example: event scheduled from 8 AM to 3 PM would be calculated at 7 work hours</inlineHelpText>
        <label># of hours of work</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>or_Travel_Hours_to_be_compensated__c</fullName>
        <inlineHelpText>Estimated time to and from a destination to fulfill contracted work.</inlineHelpText>
        <label># or Travel Hours to be compensated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>KOL Contract</label>
    <listViews>
        <fullName>All_Open_KOL_Contracts</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>KOLContractOwner__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Lectures__c</columns>
        <columns>Lectures_Remaining__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Expired,Terminated/Cancelled</value>
        </filters>
        <label>All Open KOL Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <group>ClinicalAffairs</group>
            <group>Global_Clinical_Affairs</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contracts_Due_within_30_days</fullName>
        <columns>KOLContractOwner__c</columns>
        <columns>Expert__c</columns>
        <columns>NAME</columns>
        <columns>Include_Lectures__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Contracts Due within 30 days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_open_KOL_Contracts</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>KOLContractOwner__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Lectures__c</columns>
        <columns>Lectures_Remaining__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Expired,Terminated/Cancelled</value>
        </filters>
        <filters>
            <field>MyContract__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My open KOL Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <group>ClinicalAffairs</group>
            <group>Global_Clinical_Affairs</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Contracts_Created_last_30_days</fullName>
        <columns>KOLContractOwner__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>New Contracts Created last 30 days</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>KOL Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KOL Contracts</pluralLabel>
    <recordTypes>
        <fullName>Confidentiality_Contract</fullName>
        <active>true</active>
        <label>Confidentiality Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consulting_Contract</fullName>
        <active>true</active>
        <label>Consulting Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Contract</fullName>
        <active>true</active>
        <label>Other Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaking_Contract</fullName>
        <active>true</active>
        <label>Speaking Contract</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>